--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,8 +1,38 @@
 * {
     font-family: Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
   }
    
-   
+  header {
+    background-color: mediumaquamarine;
+    
+    padding-top: 5%;
+    padding-bottom: 5%;
+    
+    
+  }
+
   h1 {
-    color: SeaGreen;
+    color: whitesmoke;
   }
+
+  #header {
+    margin:0 auto;
+    text-align: center;
+  }
+
+
+  .headerWelcome {
+    font-size: medium;
+    padding-bottom: 1%;
+  }
+
+#messageContainer1 {
+  margin:0 auto;
+  text-align: center;
+  padding: 1%;
+  width: 50%;
+
+  font-weight: bold;
+}
